fixed mobile alignment

--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ body {
   display: flex;
   align-items: center;
   list-style: none;
+  padding: 5px;
 }
 
 .social li {
@@ -105,7 +106,7 @@ body {
 
 .social li a {
   position: relative;
-  padding: 0px 0;
+  padding: 10px 0;
   text-decoration: none;
   color: #333;
 }
